[Bug fixes] fixing scrollbar and height issues on index page

--- a/css/utilities.css
+++ b/css/utilities.css
@@ -310,6 +310,6 @@
    Overflow
    ========================================================================== */
 
-.u-overflow-scroll {
-  overflow: scroll;
+.u-overflowy-scroll {
+  overflow-y: scroll;
 }
